# security-research

./: .env.example  .gitignore  README.md  docker-compose.yml
attacks/: 01_sqli.py  02_bola.py  03_overposting.py  README.md  aggregate.py  anova_analysis.py  common.py  healthcheck.py  pre_attack_report.py  pyproject.toml  reset_targets.py  run_all.py
backends/fastapi/orm/: Dockerfile  pyproject.toml
backends/fastapi/orm/src/app/: auth.py  config.py  db.py  main.py  schemas.py
backends/fastapi/orm/src/app/routes/: admin.py  auth.py  orders.py  products.py  profile.py
backends/fastapi/raw-sql/: Dockerfile  pyproject.toml
backends/fastapi/raw-sql/src/app/: config.py  db.py  errors.py  main.py  telemetry.py
backends/fastapi/raw-sql/src/app/routes/: admin.py  auth.py  orders.py  products.py  profile.py
contracts/: README.md  openapi.yaml
contracts/schemas/: admin.json  auth.json  error.json  health.json  orders.json  products.json  profile.json
db/: fetch_dummyjson.py  schema.sql  seed.py
frontend/: .gitignore  Dockerfile  README.md  next.config.mjs  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: add-to-cart.tsx  announcement-bar.tsx  category-grid.tsx  deals-section.tsx  header-cart.tsx  hero-carousel.tsx  newsletter-section.tsx  product-card.tsx  product-grid.tsx  reviews-section.tsx  section-label.tsx  site-footer.tsx  site-header.tsx  star-rating.tsx  trust-strip.tsx
frontend/lib/: api.ts  cart-store.ts  dummyjson.ts  session.ts  (+1 more)
monitoring/: README.md  dashboard.json  metrics_export.py
(+84 files in other folders)
