[project]
name = "security-research-attacks"
version = "0.1.0"
description = "security-research төслийн халдлагын скриптүүд"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "psycopg[binary]>=3.2.0",
  "datadog>=0.51.0",
  "statsmodels>=0.14.0",
  "numpy>=2.0.0",
  "scipy>=1.14.0",
]
