[project]
name = "security-research-fastapi-orm"
version = "0.1.0"
description = "FastAPI + SQLAlchemy 2.0 async (ORM) — security-research 6/6"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "sqlalchemy[asyncio]>=2.0.35",
  "asyncpg>=0.29.0",
  "pydantic>=2.9.0",
  "bcrypt>=4.2.0",
  "pyjwt>=2.9.0",
  "datadog>=0.51.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
